# Uncivilized

./: CMakeLists.txt  README.md
data/: uncivilized.cfg
data/.svn/: all-wcprops  entries
data/images/: ai1.xpm  ai2.xpm  att.xpm  building_icon.xpm  font.xpm  frame_edge.xpm  frame_h.xpm  icon16.xpm  icon32.xpm  icon64.xpm  stat.xpm  step.xpm  unit_sprite.xpm  work.xpm
data/images/.svn/: all-wcprops  entries
data/images/.svn/text-base/: ai0.xpm.svn-base  ai3.xpm.svn-base  border.xpm.svn-base  building.xpm.svn-base  flag.xpm.svn-base  fow_edge.xpm.svn-base  frame_v.xpm.svn-base  icon48.xpm.svn-base  marker.xpm.svn-base  resource.xpm.svn-base  resource_icon.xpm.svn-base  roman.xpm.svn-base  terrain.xpm.svn-base  unit_icon.xpm.svn-base
po/: CMakeLists.txt  en.po
po/.svn/: all-wcprops  entries
po/.svn/text-base/: POTFILES.in.svn-base  sv.po.svn-base
src/: ai.cpp  city.h  game.cpp  main.h  network.cpp  paint.cpp  paint.h  path.h  setup.cpp  setup.h  unit.h
src/.svn/: all-wcprops  entries
src/.svn/text-base/: _config.h.in.svn-base  city.cpp.svn-base  game.h.svn-base  login.cpp.svn-base  login.h.svn-base  main.cpp.svn-base  path.cpp.svn-base  unit.cpp.svn-base
